# rika-rusty

./: .example.env  .gitignore  Cargo.toml  Dockerfile  build.sh  devenv.nix  devenv.yaml  docker-compose.yaml  docker-compose.yml  example.env  flake.nix  nohup.out
.sqlx/: query-0bfbc5457a57378d32dff49c55f520005ed5a6f7a59c5f96c0925d42f15a8f33.json  query-13d65fe98b342c21e964c89adafd3263c38339bddf758f98bcc1641268bf4e65.json  query-1ae1c60d65cb96b2fdd4c58b72d235d9fe3c67d5cd5471e5d80464ab9dba1f74.json  query-1b28fdd798c98e841aab64ec7472c3688487ee42db4b0d3a20e3ebea601fd08a.json  query-2d5d4bca2716acd014532003e91400311553d70461d18e85927274bbbd85d265.json  query-2e3ca2d626ed8187bd4a3404ce6809f4f39f1b838478775fd793241fac167e02.json  query-2f4e99dc8fb30a6f83e5d038b071b60cfdaa17bd7d02effbbaa3ffff7d4b7576.json  query-344eb13a74cc77ca3bb67b285477cd3c9fb77947b54b5372648061dc55e7a37b.json  query-3c0f65f9b5dbbc6cc3673c5903f55653d67172495303316960e05112a72298c5.json  query-3ff9c4c2442f9e59b05d90971834b74f17473c71cc9c1bea451bfc6f625bad2d.json  query-40b18659f3104d836b2d3d627568a66cda2fd11488ecfa7090497e0a85763158.json  query-4332076de7c0f5709456fc69c451b5ef69b2af5d456bb0687b6190e0d5caec2f.json  query-482b2eb498d378b4ca6a3646c496c7e10e16720b1b5c550ab5662db57a08685f.json  query-67ef5e6370dea3d1d41b1b96b56407293b05e93855a1e79a59a751644c8bf7e5.json  query-74b45149e6c0b0783498a987f99a4b93545f1135c6b9f469ff8ab5fd942373a7.json  query-7fb7ed366eaced45b94cf5fd94adbb2f582294835ecfb9e396e8e2decec8560a.json  query-8d30e8154214bcf8f222ca2568e6f806d71733530405c344d7c5549da01a1cc1.json  query-9de8810d2de7d5492c6d1eba7c41604f057998bb797139d3e05400f58fa96e30.json  query-a21ce54c5c21040b744395f6c4122df690bd650d1a62ba34123acded02f3082e.json  query-a9bf5922645976c8af1c2bab8cb45a899403cbfae4172f870f1a71a3676aa8a3.json  (+8 more)
src/: error.rs  (+2 more)
(+63 files in other folders)
