[package]
name = "osaka"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[dependencies]
bevy_reflect = "0.12.1"
chrono = "0.4.31"
deep-struct-update = "0.1.0"
derive_more = "0.99.17"
dotenvy = "0.15.7"
envy = "0.4.2"
fchashmap = "0.1.3"
itertools = "0.12.0"
log = "0.4.20"
nestruct = "0.1.0"
paste = "1.0.14"
poise = "0.5.7"
poise-i18n = "0.1.0"
rand = "0.8.5"
reqwest = "0.11.23"
rosu-pp = "1.0.0"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", features = ["serialize"] }
rusty-booru = "0.2.1"
rusty18n = "0.1.1"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["bigdecimal", "postgres", "runtime-tokio-rustls"] }
sqlx-conditional-queries = { version = "0.1.3", features = ["postgres"] }
sqlx-conditional-queries-layering = "0.1.2"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
with_builtin_macros = "0.1.0"
